  * fixed problem with saveName
  * fixed multiple problems with collapsed stacks
  * change color of stroke when highlighting blocks
  * added image, and palette-stroke-highlight args to rtps files.
  * combine various run modes (switch between fast, slow, and step on the fly)
  * fix size of palette highlight (Sam Parkinson)
  * fix value box label in DOM (Sam Parkinson)
  * factory-branch fixes
    - proper updating of labels
    - proper resizing
    - proper calculation of hit area
  * fixed mouse button code & don't move stage when running code (Ignacio)
  * Don't allow text in number blocks
  * expand blocks horizontally (for long labels)
  * add value display to math blocks
  * add default args to math blocks (Ignacio)
  * fine tune value display positioning 

TODO:
  * add value to boolean blocks
  * save errors
  * display rubrics
  * more efficient until and while?
  * save to javascript
  * RTL support
  * zoom and scroll?
  * use graphical error messages
  * make expand an array, one element for each arg or slot
  * user defined block types (trivial with factory)
  * three-arg flow blocks (trivial with factory)
  * three-arg arg blocks (trivial with factory)
  * write SVG generator
  * artwork beautification?
  * try to detect difference between unknown flow and arg blocks
  * button block (a stack that is run when you click on a button)
    - two args: artwork for the button; action name to take
  * maybe we want to add local variables?
  * auto-guestimate block width (need to set label name before creating artwork)

KNOWN BUGS:
  * show blocks should put blocks on top of everything else
  * blocks in a stack being dragged should be on top of everything else
  * sample projects cannot be shown on Android
  * don't save full-sized bitmap to session
  * find a scalable approach to drawing on the canvas
  * fix race conditions
  * not all blocks highlight when using step-by-step mode
  * collapse bug manifests itself when loading custom stacks